# ChronosArchiver

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  COMPLETE_SYSTEM.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_FIXES.md  DOCKER_SETUP.md  Dockerfile  FEATURES.md  FULL_STACK_OVERVIEW.md  INSTALL.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: DIAGRAMS.md  INTELLIGENCE.md  README.md  TUTORIAL_PT.md  api.md  architecture.md  usage.md
examples/: README.md  advanced_usage.py  basic_usage.py  sample_sites.txt
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: ArchiveJobProgress.tsx  Layout.tsx  MediaCard.tsx  MediaPlayer.tsx  PipelineMonitor.tsx  RecentJobs.tsx  SearchFiltersPanel.tsx  SearchResultCard.tsx  SearchResults.tsx  StatCard.tsx  UrlList.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Archive.tsx  Dashboard.tsx  MediaBrowser.tsx  Search.tsx  Settings.tsx  Statistics.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/store/: useJobStore.ts  useThemeStore.ts
frontend/src/types/: index.ts
scripts/: logs.sh  rebuild.sh  start.sh  stop.sh  validate_docker.sh
src/chronos_archiver/: __init__.py  __main__.py  api.py  cli.py  config.py  discovery.py  indexing.py  ingestion.py  intelligence.py  models.py  queue_manager.py  search.py  tika.py  transformation.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_discovery.py  test_indexing.py  test_ingestion.py  test_intelligence.py  test_models.py  test_queue_manager.py  test_search.py  test_tika.py  test_transformation.py  test_utils.py
tests/fixtures/: README.md  sample_cdx_response.json  sample_html_dar.html  sample_html_ieab.html  sample_sites.txt
tests/integration/: __init__.py  test_pipeline.py
